---
source: crates/derive-python/src/codegen/mod.rs
expression: types_output
---
from abc import ABC, abstractmethod
import collections.abc
import typing
import pydantic
import typing as _typing
import pydantic as _pydantic

# Generated for published documents of derived collection patterns/sums
class Document(_pydantic.BaseModel):
    model_config = _pydantic.ConfigDict(extra='allow')

    Count: _typing.Optional[int] = None
    Key: str
    Sum: int



# Generated for read documents of sourced collection patterns/ints
class SourceFromIntsIntValue(_pydantic.BaseModel):
    model_config = _pydantic.ConfigDict(extra='allow')

    Int: int
    Key: str

SourceFromInts: _typing.TypeAlias = "SourceFromIntsIntValue"


# Generated for read documents of sourced collection patterns/strings
class SourceProcessStrings(_pydantic.BaseModel):
    class Metadata(_pydantic.BaseModel):
        model_config = _pydantic.ConfigDict(extra='allow')


    model_config = _pydantic.ConfigDict(extra='allow')

    id: str
    metadata: _typing.Optional["Metadata"] = None
    text: str



# Generated for the endpoint configuration of `spec.configSchema`.
class EndpointConfig(_pydantic.BaseModel):
    model_config = _pydantic.ConfigDict(extra='allow')

    apiKey: str
    multiplier: int = 2



# Generated for the resource configuration of `spec.resourceConfigSchema`.
class ResourceConfig(_pydantic.BaseModel):
    model_config = _pydantic.ConfigDict(extra='allow')

    readOnly: bool = False



class ConnectorState(pydantic.BaseModel):
    """Mirror of Estuary protocol's flow.ConnectorState."""

    # An updated state, or patch thereof.
    updated: dict[str, typing.Any]
    # When true, `updated` is an RFC 7396 JSON Merge Patch rather than a full replacement.
    merge_patch: bool = pydantic.Field(default=False, serialization_alias='mergePatch')


class Request(pydantic.BaseModel):

    class Open[R = ResourceConfig](pydantic.BaseModel):
        """Opens the derivation with its connector state."""

        state: dict[str, typing.Any]
        # Resource configuration (`lambda`) of each transform, in order.
        resources: list[R] = []

    class Transform[R = ResourceConfig](pydantic.BaseModel):
        """A transform of a derivation which is being validated."""

        name: str
        # Resource configuration of the transform, which is its `lambda`.
        resource_config: R = pydantic.Field(alias='resourceConfig')

    class Validate[R = ResourceConfig](pydantic.BaseModel):
        """Validates the derivation of collection `name` as it's published."""

        name: str
        transforms: "list[Request.Transform[R]]"

    class Flush(pydantic.BaseModel):
        # Aggregated connector state patches contributed by all participating shards
        # in the PREVIOUS Flush iteration of the current transaction; empty on the
        # first iteration.
        state_patches: list[typing.Any] = pydantic.Field(default_factory=list, alias='statePatches')

    class Reset(pydantic.BaseModel):
        pass

    flush: typing.Optional[Flush] = None
    reset: typing.Optional[Reset] = None


    class ReadFromInts(pydantic.BaseModel):
        doc: SourceFromInts
        transform: typing.Literal[0]


    class ReadProcessStrings(pydantic.BaseModel):
        doc: SourceProcessStrings
        transform: typing.Literal[1]

    read : typing.Annotated[ReadFromInts | ReadProcessStrings, pydantic.Field(discriminator='transform')] | None = None

    @pydantic.model_validator(mode='before')
    @classmethod
    def inject_default_transform(cls, data: dict[str, typing.Any]) -> dict[str, typing.Any]:
        if 'read' in data and 'transform' not in data['read']:
            data['read']['transform'] = 0 # Make implicit default explicit
        return data


class Response(pydantic.BaseModel):
    class Opened(pydantic.BaseModel):
        pass

    class Published(pydantic.BaseModel):
        doc: Document

    class Flushed(pydantic.BaseModel):
        # Connector state update to contribute this transaction.
        # Aggregated across shards and fed back via Request.Flush.state_patches.
        state: typing.Optional[ConnectorState] = None
        # Request a further Flush iteration this transaction.
        more: bool = False

    class Validated(pydantic.BaseModel):
        """Outcome of validating the derivation."""

        class Transform(pydantic.BaseModel):
            # Does this transform never publish documents? A read-only
            # transform needn't wait for prior transactions to commit.
            read_only: bool = pydantic.Field(default=False, serialization_alias='readOnly')

        # Validated transforms, in the order of `Request.Validate.transforms`.
        transforms: "list[Response.Validated.Transform]"

    opened: typing.Optional[Opened] = None
    published: typing.Optional[Published] = None
    flushed: typing.Optional[Flushed] = None

class IDerivation[C = EndpointConfig, R = ResourceConfig](ABC):
    """Abstract base class for derivation implementations.

    `C` is the type of the derivation's `config`, and `R` of the resource
    configuration (`lambda`) of each transform. They default to the types
    generated from the derivation's `spec`. A derivation may instead declare
    types of its own, as `class Derivation(IDerivation[MyConfig])`, and is
    then responsible for keeping them equivalent to its declared `spec`.

    `Derivation` must directly subclass `IDerivation`, from which its types
    `C` and `R` are resolved: a validation of the derivation fails otherwise."""

    def __init__(self, open: Request.Open[R], config: C):
        """Initialize the derivation with an Open message, and its `config`."""
        pass

    @classmethod
    def validate(cls, validate: Request.Validate[R], config: C) -> Response.Validated:
        """Validate the derivation as it's published, raising to fail.

        The default marks a transform as read-only if its resource
        configuration has a true `readOnly`."""
        return Response.Validated(
            transforms=[
                Response.Validated.Transform(
                    read_only=bool(getattr(transform.resource_config, "readOnly", False))
                )
                for transform in validate.transforms
            ]
        )

    @abstractmethod
    async def from_ints(self, read: Request.ReadFromInts) -> collections.abc.AsyncIterator[Document]:
        """Transform method for 'fromInts' source."""
        if False:
            yield  # Mark as a generator.

    @abstractmethod
    async def process_strings(self, read: Request.ReadProcessStrings) -> collections.abc.AsyncIterator[Document]:
        """Transform method for 'process-strings' source."""
        if False:
            yield  # Mark as a generator.

    async def flush(self, state_patches: list[typing.Any], flushed: Response.Flushed) -> collections.abc.AsyncIterator[Document]:
        """Complete deferred work for the current transaction, publishing all
        documents derived from prior reads.

        Set `flushed.state` to contribute a connector state update, and/or set
        `flushed.more = True` to request a further Flush iteration (a scatter/gather
        round across the derivation's shards). On each call `state_patches` holds the
        aggregated `state` updates returned by all shards in the previous iteration
        (empty on the first). All Documents MUST be yielded before flush returns
        a terminal (`more = False`) Response.Flushed.
        Override to implement pipelining or stateful derivations."""
        if False:
            yield  # Mark as a generator.

    async def reset(self):
        """Reset internal state for testing. Override if needed."""
        pass
